--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p class="descricao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
-                        <a target="blank" href="https://www.netflix.com/title/70178217"<i class="far fa-play-circle"></i>
+                        <a target="blank" href="https://www.netflix.com/title/70178217"><i class="far fa-play-circle"></i>
                         Assistir Agora</a>
                     </button>
                     <button role= "button" class="botao">
